Fixed-icon-alignment: Sort by arrow icon alignment issue.

--- a/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -62,6 +62,11 @@
         .products.wrapper ~ .toolbar & {
             display: none;
         }
+
+        .sorter-action {
+            position: relative;
+            top: -2px;
+        }
     }
 
     .sorter-options {
